--- a/Ejercicios-JavaScript/catalogo.css
+++ b/Ejercicios-JavaScript/catalogo.css
@@ -1,68 +1,76 @@
 
-        :root{
-            --color-primario:red;
-            --color-secundario:blue;
-            --color-text:white;
-        }
-        
-        main {
-            display: grid;
-            grid-template-columns: auto auto auto;
-        }
+:root{
+    --color-primario:red;
+    --color-secundario:blue;
+    --color-text:white;
+}
 
-        main div {
-            border: 1px solid black;
-            border-radius: 15px;
-            margin: 15px;
-            padding: 15px;
-        }
+main {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
 
-        div img {
-            width: 100%;
-        }
+main div {
+    border: 1px solid black;
+    border-radius: 15px;
+    margin: 15px;
+    padding: 15px;
+}
 
-        .item1 {
-            grid-area: header;
-            background-color: var(--color-primario);
-            color: var(--color-text);
-        }
+div img {
+    width: 100%;
+}
 
-        .item2 {
-            grid-area: nav;
-        }
+.item1 {
+    grid-area: header;
+    background-color: var(--color-primario);
+    color: var(--color-text);
+}
 
-        .item3 {
-            grid-area: aside;
-        }
+.item2 {
+    grid-area: nav;
+}
 
-        .item4 {
-            grid-area: main;
-        }
+.item3 {
+    grid-area: aside;
+}
 
-        .item5 {
-            grid-area: footer;
-        }
+.item4 {
+    grid-area: main;
+}
 
-        .grid-container {
-            display: grid;
-            grid-template-areas: 
-            'header header header header'
-            'nav nav nav nav'
-            'aside main main main'
-            'footer footer footer footer';
-            gap: 10px;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+.item5 {
+    grid-area: footer;
+}
 
-        a{
-            text-decoration: none;
-            background-color: var(--color-primario);
-            color: var(--color-text);
-            font-weight: 500;
-            padding: 5px;
-            transition: background-color 0.8s linear 0.2s, padding 0.3s ease;
-        }
-        a:hover{
-            background-color: var(--color-secundario);
-            padding: 7px;
-        }
+.grid-container {
+    display: grid;
+    grid-template-areas: 
+    'header header header header'
+    'nav nav nav nav'
+    'aside main main main'
+    'footer footer footer footer';
+    gap: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a{
+    text-decoration: none;
+    background-color: var(--color-primario);
+    color: var(--color-text);
+    font-weight: 500;
+    padding: 5px;
+    transition: background-color 0.8s linear 0.2s, padding 0.3s ease;
+}
+a:hover{
+    background-color: var(--color-secundario);
+    padding: 7px;
+}
+
+#cant-prod {
+    background-color: var(--color-primario);
+    color: var(--color-text);
+    display: inline;
+    border-radius: 50%;
+    padding: 7px;
+}
